maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:4: error: not found: value i
  setIndication(sx,sy,i)
                      ^